osc_expr_parser.output
Terminals unused in grammar

   OSC_EXPR_UPLUS
   OSC_EXPR_UMINUS


Grammar

    0 $accept: start $end

    1 start: START_EXPNS expns
    2      | START_FUNCTION function

    3 expns: %empty
    4      | expr
    5      | expns ',' expr
    6      | expns ','

    7 args: arg
    8     | args ',' arg

    9 arg: OSC_EXPR_NUM
   10    | OSC_EXPR_STRING
   11    | OSC_EXPR_OSCADDRESS
   12    | expr
   13    | function

   14 function: OSC_EXPR_LAMBDA '(' '[' parameters ']' ',' args ')'
   15         | OSC_EXPR_LAMBDA '(' parameter ',' args ')'
   16         | OSC_EXPR_LAMBDA '(' '[' ']' ',' args ')'

   17 parameters: parameter
   18           | parameters ',' parameter

   19 parameter: OSC_EXPR_STRING

   20 expr: '(' expr ')'
   21     | OSC_EXPR_STRING '(' args ')'
   22     | OSC_EXPR_STRING '(' args ',' ')'
   23     | OSC_EXPR_STRING '(' ')'
   24     | OSC_EXPR_QUOTED_EXPR
   25     | OSC_EXPR_OSCADDRESS '(' args ')'
   26     | OSC_EXPR_OSCADDRESS '(' ')'
   27     | arg '+' arg
   28     | arg '-' arg
   29     | arg '*' arg
   30     | arg '/' arg
   31     | arg '%' arg
   32     | arg '^' arg
   33     | arg OSC_EXPR_EQ arg
   34     | arg OSC_EXPR_NEQ arg
   35     | arg '<' arg
   36     | arg OSC_EXPR_LTE arg
   37     | arg '>' arg
   38     | arg OSC_EXPR_GTE arg
   39     | arg '&' arg
   40     | arg OSC_EXPR_ANDAND arg
   41     | arg '|' arg
   42     | arg OSC_EXPR_OROR arg
   43     | arg OSC_EXPR_PLUSEQ arg
   44     | arg OSC_EXPR_MINUSEQ arg
   45     | arg OSC_EXPR_MULTEQ arg
   46     | arg OSC_EXPR_DIVEQ arg
   47     | arg OSC_EXPR_MODEQ arg
   48     | arg OSC_EXPR_POWEQ arg
   49     | OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS
   50     | arg '.' OSC_EXPR_OSCADDRESS
   51     | arg '.' OSC_EXPR_OSCADDRESS '(' ')'
   52     | arg '.' OSC_EXPR_OSCADDRESS '(' args ')'
   53     | '!' arg
   54     | '-' arg
   55     | OSC_EXPR_INC OSC_EXPR_OSCADDRESS
   56     | OSC_EXPR_DEC OSC_EXPR_OSCADDRESS
   57     | OSC_EXPR_OSCADDRESS OSC_EXPR_INC
   58     | OSC_EXPR_OSCADDRESS OSC_EXPR_DEC
   59     | OSC_EXPR_OSCADDRESS '=' arg
   60     | OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS '=' arg
   61     | arg '.' OSC_EXPR_OSCADDRESS '=' arg
   62     | OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS '=' arg
   63     | OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg CLOSE_DBL_BRKTS '=' arg
   64     | OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg ':' arg CLOSE_DBL_BRKTS '=' arg
   65     | arg '?' arg ':' arg
   66     | OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARK arg
   67     | OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARKEQ arg
   68     | '[' args ']'
   69     | '[' ']'
   70     | arg OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   71     | OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   72     | '(' function ',' args ')'
   73     | '`' OSC_EXPR_STRING '`'
   74     | '`' OSC_EXPR_OSCADDRESS '`'
   75     | OSC_EXPR_STRING OSC_EXPR_INC '=' arg
   76     | OSC_EXPR_STRING OSC_EXPR_DEC '=' arg
   77     | OSC_EXPR_INC OSC_EXPR_STRING '=' arg
   78     | OSC_EXPR_DEC OSC_EXPR_STRING '=' arg


Terminals, with rules where they appear

$end (0) 0
'!' (33) 53
'%' (37) 31
'&' (38) 39
'(' (40) 14 15 16 20 21 22 23 25 26 51 52 72
')' (41) 14 15 16 20 21 22 23 25 26 51 52 72
'*' (42) 29
'+' (43) 27
',' (44) 5 6 8 14 15 16 18 22 72
'-' (45) 28 54
'.' (46) 49 50 51 52 61 62
'/' (47) 30
':' (58) 63 64 65
'<' (60) 35
'=' (61) 59 60 61 62 63 64 75 76 77 78
'>' (62) 37
'?' (63) 65
'[' (91) 14 16 68 69
']' (93) 14 16 68 69
'^' (94) 32
'`' (96) 73 74
'|' (124) 41
error (256)
OSC_EXPR_NUM (258) 9
OSC_EXPR_STRING (259) 10 19 21 22 23 73 75 76 77 78
OSC_EXPR_OSCADDRESS (260) 11 25 26 49 50 51 52 55 56 57 58 59 60 61
    62 63 64 66 67 71 74
OSC_EXPR_LAMBDA (261) 14 15 16
OSC_EXPR_PLUSEQ (262) 43
OSC_EXPR_MINUSEQ (263) 44
OSC_EXPR_MULTEQ (264) 45
OSC_EXPR_DIVEQ (265) 46
OSC_EXPR_MODEQ (266) 47
OSC_EXPR_POWEQ (267) 48
OSC_EXPR_TERNARY_COND (268)
OSC_EXPR_OROR (269) 42
OSC_EXPR_ANDAND (270) 40
OSC_EXPR_EQ (271) 33
OSC_EXPR_NEQ (272) 34
OSC_EXPR_LTE (273) 36
OSC_EXPR_GTE (274) 38
OSC_EXPR_PREFIX_INC (275)
OSC_EXPR_PREFIX_DEC (276)
OSC_EXPR_UPLUS (277)
OSC_EXPR_UMINUS (278)
OSC_EXPR_DBLQMARK (279) 66
OSC_EXPR_DBLQMARKEQ (280) 67
OSC_EXPR_INC (281) 55 57 75 77
OSC_EXPR_DEC (282) 56 58 76 78
OSC_EXPR_FUNC_CALL (283)
OSC_EXPR_QUOTED_EXPR (284) 24
OPEN_DBL_BRKTS (285) 60 63 64 70 71
CLOSE_DBL_BRKTS (286) 60 63 64 70 71
START_EXPNS (287) 1
START_FUNCTION (288) 2


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
start (56)
    on left: 1 2, on right: 0
expns (57)
    on left: 3 4 5 6, on right: 1 5 6
args (58)
    on left: 7 8, on right: 8 14 15 16 21 22 25 52 60 68 70 71 72
arg (59)
    on left: 9 10 11 12 13, on right: 7 8 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 52 53 54 59 60 61
    62 63 64 65 66 67 70 75 76 77 78
function (60)
    on left: 14 15 16, on right: 2 13 72
parameters (61)
    on left: 17 18, on right: 14 18
parameter (62)
    on left: 19, on right: 15 17 18
expr (63)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78, on right:
    4 5 12 20


State 0

    0 $accept: . start $end
    1 start: . START_EXPNS expns
    2      | . START_FUNCTION function

    START_EXPNS     shift, and go to state 1
    START_FUNCTION  shift, and go to state 2

    start  go to state 3


State 1

    1 start: START_EXPNS . expns
    3 expns: . %empty
    4      | . expr
    5      | . expns ',' expr
    6      | . expns ','
    9 arg: . OSC_EXPR_NUM
   10    | . OSC_EXPR_STRING
   11    | . OSC_EXPR_OSCADDRESS
   12    | . expr
   13    | . function
   14 function: . OSC_EXPR_LAMBDA '(' '[' parameters ']' ',' args ')'
   15         | . OSC_EXPR_LAMBDA '(' parameter ',' args ')'
   16         | . OSC_EXPR_LAMBDA '(' '[' ']' ',' args ')'
   20 expr: . '(' expr ')'
   21     | . OSC_EXPR_STRING '(' args ')'
   22     | . OSC_EXPR_STRING '(' args ',' ')'
   23     | . OSC_EXPR_STRING '(' ')'
   24     | . OSC_EXPR_QUOTED_EXPR
   25     | . OSC_EXPR_OSCADDRESS '(' args ')'
   26     | . OSC_EXPR_OSCADDRESS '(' ')'
   27     | . arg '+' arg
   28     | . arg '-' arg
   29     | . arg '*' arg
   30     | . arg '/' arg
   31     | . arg '%' arg
   32     | . arg '^' arg
   33     | . arg OSC_EXPR_EQ arg
   34     | . arg OSC_EXPR_NEQ arg
   35     | . arg '<' arg
   36     | . arg OSC_EXPR_LTE arg
   37     | . arg '>' arg
   38     | . arg OSC_EXPR_GTE arg
   39     | . arg '&' arg
   40     | . arg OSC_EXPR_ANDAND arg
   41     | . arg '|' arg
   42     | . arg OSC_EXPR_OROR arg
   43     | . arg OSC_EXPR_PLUSEQ arg
   44     | . arg OSC_EXPR_MINUSEQ arg
   45     | . arg OSC_EXPR_MULTEQ arg
   46     | . arg OSC_EXPR_DIVEQ arg
   47     | . arg OSC_EXPR_MODEQ arg
   48     | . arg OSC_EXPR_POWEQ arg
   49     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS
   50     | . arg '.' OSC_EXPR_OSCADDRESS
   51     | . arg '.' OSC_EXPR_OSCADDRESS '(' ')'
   52     | . arg '.' OSC_EXPR_OSCADDRESS '(' args ')'
   53     | . '!' arg
   54     | . '-' arg
   55     | . OSC_EXPR_INC OSC_EXPR_OSCADDRESS
   56     | . OSC_EXPR_DEC OSC_EXPR_OSCADDRESS
   57     | . OSC_EXPR_OSCADDRESS OSC_EXPR_INC
   58     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DEC
   59     | . OSC_EXPR_OSCADDRESS '=' arg
   60     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS '=' arg
   61     | . arg '.' OSC_EXPR_OSCADDRESS '=' arg
   62     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS '=' arg
   63     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg CLOSE_DBL_BRKTS '=' arg
   64     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg ':' arg CLOSE_DBL_BRKTS '=' arg
   65     | . arg '?' arg ':' arg
   66     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARK arg
   67     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARKEQ arg
   68     | . '[' args ']'
   69     | . '[' ']'
   70     | . arg OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   71     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   72     | . '(' function ',' args ')'
   73     | . '`' OSC_EXPR_STRING '`'
   74     | . '`' OSC_EXPR_OSCADDRESS '`'
   75     | . OSC_EXPR_STRING OSC_EXPR_INC '=' arg
   76     | . OSC_EXPR_STRING OSC_EXPR_DEC '=' arg
   77     | . OSC_EXPR_INC OSC_EXPR_STRING '=' arg
   78     | . OSC_EXPR_DEC OSC_EXPR_STRING '=' arg

    OSC_EXPR_NUM          shift, and go to state 4
    OSC_EXPR_STRING       shift, and go to state 5
    OSC_EXPR_OSCADDRESS   shift, and go to state 6
    OSC_EXPR_LAMBDA       shift, and go to state 7
    '-'                   shift, and go to state 8
    '!'                   shift, and go to state 9
    OSC_EXPR_INC          shift, and go to state 10
    OSC_EXPR_DEC          shift, and go to state 11
    OSC_EXPR_QUOTED_EXPR  shift, and go to state 12
    '('                   shift, and go to state 13
    '['                   shift, and go to state 14
    '`'                   shift, and go to state 15

    $default  reduce using rule 3 (expns)

    expns     go to state 16
    arg       go to state 17
    function  go to state 18
    expr      go to state 19


State 2

    2 start: START_FUNCTION . function
   14 function: . OSC_EXPR_LAMBDA '(' '[' parameters ']' ',' args ')'
   15         | . OSC_EXPR_LAMBDA '(' parameter ',' args ')'
   16         | . OSC_EXPR_LAMBDA '(' '[' ']' ',' args ')'

    OSC_EXPR_LAMBDA  shift, and go to state 7

    function  go to state 20


State 3

    0 $accept: start . $end

    $end  shift, and go to state 21


State 4

    9 arg: OSC_EXPR_NUM .

    $default  reduce using rule 9 (arg)


State 5

   10 arg: OSC_EXPR_STRING .
   21 expr: OSC_EXPR_STRING . '(' args ')'
   22     | OSC_EXPR_STRING . '(' args ',' ')'
   23     | OSC_EXPR_STRING . '(' ')'
   75     | OSC_EXPR_STRING . OSC_EXPR_INC '=' arg
   76     | OSC_EXPR_STRING . OSC_EXPR_DEC '=' arg

    OSC_EXPR_INC  shift, and go to state 22
    OSC_EXPR_DEC  shift, and go to state 23
    '('           shift, and go to state 24

    $default  reduce using rule 10 (arg)


State 6

   11 arg: OSC_EXPR_OSCADDRESS .
   25 expr: OSC_EXPR_OSCADDRESS . '(' args ')'
   26     | OSC_EXPR_OSCADDRESS . '(' ')'
   49     | OSC_EXPR_OSCADDRESS . '.' OSC_EXPR_OSCADDRESS
   57     | OSC_EXPR_OSCADDRESS . OSC_EXPR_INC
   58     | OSC_EXPR_OSCADDRESS . OSC_EXPR_DEC
   59     | OSC_EXPR_OSCADDRESS . '=' arg
   60     | OSC_EXPR_OSCADDRESS . OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS '=' arg
   62     | OSC_EXPR_OSCADDRESS . '.' OSC_EXPR_OSCADDRESS '=' arg
   63     | OSC_EXPR_OSCADDRESS . OPEN_DBL_BRKTS arg ':' arg CLOSE_DBL_BRKTS '=' arg
   64     | OSC_EXPR_OSCADDRESS . OPEN_DBL_BRKTS arg ':' arg ':' arg CLOSE_DBL_BRKTS '=' arg
   66     | OSC_EXPR_OSCADDRESS . OSC_EXPR_DBLQMARK arg
   67     | OSC_EXPR_OSCADDRESS . OSC_EXPR_DBLQMARKEQ arg
   71     | OSC_EXPR_OSCADDRESS . OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS

    '='                  shift, and go to state 25
    OSC_EXPR_DBLQMARK    shift, and go to state 26
    OSC_EXPR_DBLQMARKEQ  shift, and go to state 27
    OSC_EXPR_INC         shift, and go to state 28
    OSC_EXPR_DEC         shift, and go to state 29
    OPEN_DBL_BRKTS       shift, and go to state 30
    '.'                  shift, and go to state 31
    '('                  shift, and go to state 32

    $default  reduce using rule 11 (arg)


State 7

   14 function: OSC_EXPR_LAMBDA . '(' '[' parameters ']' ',' args ')'
   15         | OSC_EXPR_LAMBDA . '(' parameter ',' args ')'
   16         | OSC_EXPR_LAMBDA . '(' '[' ']' ',' args ')'

    '('  shift, and go to state 33


State 8

    9 arg: . OSC_EXPR_NUM
   10    | . OSC_EXPR_STRING
   11    | . OSC_EXPR_OSCADDRESS
   12    | . expr
   13    | . function
   14 function: . OSC_EXPR_LAMBDA '(' '[' parameters ']' ',' args ')'
   15         | . OSC_EXPR_LAMBDA '(' parameter ',' args ')'
   16         | . OSC_EXPR_LAMBDA '(' '[' ']' ',' args ')'
   20 expr: . '(' expr ')'
   21     | . OSC_EXPR_STRING '(' args ')'
   22     | . OSC_EXPR_STRING '(' args ',' ')'
   23     | . OSC_EXPR_STRING '(' ')'
   24     | . OSC_EXPR_QUOTED_EXPR
   25     | . OSC_EXPR_OSCADDRESS '(' args ')'
   26     | . OSC_EXPR_OSCADDRESS '(' ')'
   27     | . arg '+' arg
   28     | . arg '-' arg
   29     | . arg '*' arg
   30     | . arg '/' arg
   31     | . arg '%' arg
   32     | . arg '^' arg
   33     | . arg OSC_EXPR_EQ arg
   34     | . arg OSC_EXPR_NEQ arg
   35     | . arg '<' arg
   36     | . arg OSC_EXPR_LTE arg
   37     | . arg '>' arg
   38     | . arg OSC_EXPR_GTE arg
   39     | . arg '&' arg
   40     | . arg OSC_EXPR_ANDAND arg
   41     | . arg '|' arg
   42     | . arg OSC_EXPR_OROR arg
   43     | . arg OSC_EXPR_PLUSEQ arg
   44     | . arg OSC_EXPR_MINUSEQ arg
   45     | . arg OSC_EXPR_MULTEQ arg
   46     | . arg OSC_EXPR_DIVEQ arg
   47     | . arg OSC_EXPR_MODEQ arg
   48     | . arg OSC_EXPR_POWEQ arg
   49     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS
   50     | . arg '.' OSC_EXPR_OSCADDRESS
   51     | . arg '.' OSC_EXPR_OSCADDRESS '(' ')'
   52     | . arg '.' OSC_EXPR_OSCADDRESS '(' args ')'
   53     | . '!' arg
   54     | . '-' arg
   54     | '-' . arg
   55     | . OSC_EXPR_INC OSC_EXPR_OSCADDRESS
   56     | . OSC_EXPR_DEC OSC_EXPR_OSCADDRESS
   57     | . OSC_EXPR_OSCADDRESS OSC_EXPR_INC
   58     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DEC
   59     | . OSC_EXPR_OSCADDRESS '=' arg
   60     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS '=' arg
   61     | . arg '.' OSC_EXPR_OSCADDRESS '=' arg
   62     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS '=' arg
   63     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg CLOSE_DBL_BRKTS '=' arg
   64     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg ':' arg CLOSE_DBL_BRKTS '=' arg
   65     | . arg '?' arg ':' arg
   66     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARK arg
   67     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARKEQ arg
   68     | . '[' args ']'
   69     | . '[' ']'
   70     | . arg OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   71     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   72     | . '(' function ',' args ')'
   73     | . '`' OSC_EXPR_STRING '`'
   74     | . '`' OSC_EXPR_OSCADDRESS '`'
   75     | . OSC_EXPR_STRING OSC_EXPR_INC '=' arg
   76     | . OSC_EXPR_STRING OSC_EXPR_DEC '=' arg
   77     | . OSC_EXPR_INC OSC_EXPR_STRING '=' arg
   78     | . OSC_EXPR_DEC OSC_EXPR_STRING '=' arg

    OSC_EXPR_NUM          shift, and go to state 4
    OSC_EXPR_STRING       shift, and go to state 5
    OSC_EXPR_OSCADDRESS   shift, and go to state 6
    OSC_EXPR_LAMBDA       shift, and go to state 7
    '-'                   shift, and go to state 8
    '!'                   shift, and go to state 9
    OSC_EXPR_INC          shift, and go to state 10
    OSC_EXPR_DEC          shift, and go to state 11
    OSC_EXPR_QUOTED_EXPR  shift, and go to state 12
    '('                   shift, and go to state 13
    '['                   shift, and go to state 14
    '`'                   shift, and go to state 15

    arg       go to state 34
    function  go to state 18
    expr      go to state 35


State 9

    9 arg: . OSC_EXPR_NUM
   10    | . OSC_EXPR_STRING
   11    | . OSC_EXPR_OSCADDRESS
   12    | . expr
   13    | . function
   14 function: . OSC_EXPR_LAMBDA '(' '[' parameters ']' ',' args ')'
   15         | . OSC_EXPR_LAMBDA '(' parameter ',' args ')'
   16         | . OSC_EXPR_LAMBDA '(' '[' ']' ',' args ')'
   20 expr: . '(' expr ')'
   21     | . OSC_EXPR_STRING '(' args ')'
   22     | . OSC_EXPR_STRING '(' args ',' ')'
   23     | . OSC_EXPR_STRING '(' ')'
   24     | . OSC_EXPR_QUOTED_EXPR
   25     | . OSC_EXPR_OSCADDRESS '(' args ')'
   26     | . OSC_EXPR_OSCADDRESS '(' ')'
   27     | . arg '+' arg
   28     | . arg '-' arg
   29     | . arg '*' arg
   30     | . arg '/' arg
   31     | . arg '%' arg
   32     | . arg '^' arg
   33     | . arg OSC_EXPR_EQ arg
   34     | . arg OSC_EXPR_NEQ arg
   35     | . arg '<' arg
   36     | . arg OSC_EXPR_LTE arg
   37     | . arg '>' arg
   38     | . arg OSC_EXPR_GTE arg
   39     | . arg '&' arg
   40     | . arg OSC_EXPR_ANDAND arg
   41     | . arg '|' arg
   42     | . arg OSC_EXPR_OROR arg
   43     | . arg OSC_EXPR_PLUSEQ arg
   44     | . arg OSC_EXPR_MINUSEQ arg
   45     | . arg OSC_EXPR_MULTEQ arg
   46     | . arg OSC_EXPR_DIVEQ arg
   47     | . arg OSC_EXPR_MODEQ arg
   48     | . arg OSC_EXPR_POWEQ arg
   49     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS
   50     | . arg '.' OSC_EXPR_OSCADDRESS
   51     | . arg '.' OSC_EXPR_OSCADDRESS '(' ')'
   52     | . arg '.' OSC_EXPR_OSCADDRESS '(' args ')'
   53     | . '!' arg
   53     | '!' . arg
   54     | . '-' arg
   55     | . OSC_EXPR_INC OSC_EXPR_OSCADDRESS
   56     | . OSC_EXPR_DEC OSC_EXPR_OSCADDRESS
   57     | . OSC_EXPR_OSCADDRESS OSC_EXPR_INC
   58     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DEC
   59     | . OSC_EXPR_OSCADDRESS '=' arg
   60     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS '=' arg
   61     | . arg '.' OSC_EXPR_OSCADDRESS '=' arg
   62     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS '=' arg
   63     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg CLOSE_DBL_BRKTS '=' arg
   64     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg ':' arg CLOSE_DBL_BRKTS '=' arg
   65     | . arg '?' arg ':' arg
   66     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARK arg
   67     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARKEQ arg
   68     | . '[' args ']'
   69     | . '[' ']'
   70     | . arg OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   71     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   72     | . '(' function ',' args ')'
   73     | . '`' OSC_EXPR_STRING '`'
   74     | . '`' OSC_EXPR_OSCADDRESS '`'
   75     | . OSC_EXPR_STRING OSC_EXPR_INC '=' arg
   76     | . OSC_EXPR_STRING OSC_EXPR_DEC '=' arg
   77     | . OSC_EXPR_INC OSC_EXPR_STRING '=' arg
   78     | . OSC_EXPR_DEC OSC_EXPR_STRING '=' arg

    OSC_EXPR_NUM          shift, and go to state 4
    OSC_EXPR_STRING       shift, and go to state 5
    OSC_EXPR_OSCADDRESS   shift, and go to state 6
    OSC_EXPR_LAMBDA       shift, and go to state 7
    '-'                   shift, and go to state 8
    '!'                   shift, and go to state 9
    OSC_EXPR_INC          shift, and go to state 10
    OSC_EXPR_DEC          shift, and go to state 11
    OSC_EXPR_QUOTED_EXPR  shift, and go to state 12
    '('                   shift, and go to state 13
    '['                   shift, and go to state 14
    '`'                   shift, and go to state 15

    arg       go to state 36
    function  go to state 18
    expr      go to state 35


State 10

   55 expr: OSC_EXPR_INC . OSC_EXPR_OSCADDRESS
   77     | OSC_EXPR_INC . OSC_EXPR_STRING '=' arg

    OSC_EXPR_STRING      shift, and go to state 37
    OSC_EXPR_OSCADDRESS  shift, and go to state 38


State 11

   56 expr: OSC_EXPR_DEC . OSC_EXPR_OSCADDRESS
   78     | OSC_EXPR_DEC . OSC_EXPR_STRING '=' arg

    OSC_EXPR_STRING      shift, and go to state 39
    OSC_EXPR_OSCADDRESS  shift, and go to state 40


State 12

   24 expr: OSC_EXPR_QUOTED_EXPR .

    $default  reduce using rule 24 (expr)


State 13

    9 arg: . OSC_EXPR_NUM
   10    | . OSC_EXPR_STRING
   11    | . OSC_EXPR_OSCADDRESS
   12    | . expr
   13    | . function
   14 function: . OSC_EXPR_LAMBDA '(' '[' parameters ']' ',' args ')'
   15         | . OSC_EXPR_LAMBDA '(' parameter ',' args ')'
   16         | . OSC_EXPR_LAMBDA '(' '[' ']' ',' args ')'
   20 expr: . '(' expr ')'
   20     | '(' . expr ')'
   21     | . OSC_EXPR_STRING '(' args ')'
   22     | . OSC_EXPR_STRING '(' args ',' ')'
   23     | . OSC_EXPR_STRING '(' ')'
   24     | . OSC_EXPR_QUOTED_EXPR
   25     | . OSC_EXPR_OSCADDRESS '(' args ')'
   26     | . OSC_EXPR_OSCADDRESS '(' ')'
   27     | . arg '+' arg
   28     | . arg '-' arg
   29     | . arg '*' arg
   30     | . arg '/' arg
   31     | . arg '%' arg
   32     | . arg '^' arg
   33     | . arg OSC_EXPR_EQ arg
   34     | . arg OSC_EXPR_NEQ arg
   35     | . arg '<' arg
   36     | . arg OSC_EXPR_LTE arg
   37     | . arg '>' arg
   38     | . arg OSC_EXPR_GTE arg
   39     | . arg '&' arg
   40     | . arg OSC_EXPR_ANDAND arg
   41     | . arg '|' arg
   42     | . arg OSC_EXPR_OROR arg
   43     | . arg OSC_EXPR_PLUSEQ arg
   44     | . arg OSC_EXPR_MINUSEQ arg
   45     | . arg OSC_EXPR_MULTEQ arg
   46     | . arg OSC_EXPR_DIVEQ arg
   47     | . arg OSC_EXPR_MODEQ arg
   48     | . arg OSC_EXPR_POWEQ arg
   49     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS
   50     | . arg '.' OSC_EXPR_OSCADDRESS
   51     | . arg '.' OSC_EXPR_OSCADDRESS '(' ')'
   52     | . arg '.' OSC_EXPR_OSCADDRESS '(' args ')'
   53     | . '!' arg
   54     | . '-' arg
   55     | . OSC_EXPR_INC OSC_EXPR_OSCADDRESS
   56     | . OSC_EXPR_DEC OSC_EXPR_OSCADDRESS
   57     | . OSC_EXPR_OSCADDRESS OSC_EXPR_INC
   58     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DEC
   59     | . OSC_EXPR_OSCADDRESS '=' arg
   60     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS '=' arg
   61     | . arg '.' OSC_EXPR_OSCADDRESS '=' arg
   62     | . OSC_EXPR_OSCADDRESS '.' OSC_EXPR_OSCADDRESS '=' arg
   63     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg CLOSE_DBL_BRKTS '=' arg
   64     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS arg ':' arg ':' arg CLOSE_DBL_BRKTS '=' arg
   65     | . arg '?' arg ':' arg
   66     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARK arg
   67     | . OSC_EXPR_OSCADDRESS OSC_EXPR_DBLQMARKEQ arg
   68     | . '[' args ']'
   69     | . '[' ']'
   70     | . arg OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   71     | . OSC_EXPR_OSCADDRESS OPEN_DBL_BRKTS args CLOSE_DBL_BRKTS
   72     | . '(' function ',' args ')'
   72     | '(' . function ',' args ')'
   73     | . '`' OSC_EXPR_STRING '`'
   74     | . '`' OSC_EXPR_OSCADDRESS '`'
   75     | . OSC_EXPR_STRING OSC_EXPR_INC '=' arg
   76     | . OSC_EXPR_STRING OSC_EXPR_DEC '=' arg
   77     | . OSC_EXPR_INC OSC_EXPR_STRING '=' arg
   78     | . OSC_EXPR_DEC OSC_EXPR_STRING '=' arg

    OSC_EXPR_NUM          shift, and go to state 4
    OSC_EXPR_STRING       shift, and go to state 5
    OSC_EXPR_OSCADDRESS   shift, and go to state 6
    OSC_EXPR_LAMBDA       shift, and go to state 7
    '-'                   shift, and go to state 8
    '!'                   shift, and go to state 9
    OSC_EXPR_INC          shift, and go to state 10
    OSC_EXPR_DEC          shift, and go to state 11
    OSC_EXPR_QUOTED_EXPR  shift, and go to state 12
    '('                   shift, and go to state 13
    '['                   shift, and go to state 14
    '`'                   shift, and go to state 15

    arg       go to state 17
    function  go to state 41
    expr      go to state 42


State 14
